basic search stuff

--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -44,3 +44,12 @@
         max-height: 50px;
     }
 }
+
+#navbar {
+    border-radius: 0;
+}
+
+#app .main-panel>.content {
+    margin-top: 0;
+    padding: 0 15px;
+}
