added basic search

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -2,6 +2,7 @@
 @import "./custom/general";
 @import "./custom/scrollbar";
 @import "./custom/sidebar";
+@import "./custom/searchBar";
 
 @import "./custom/lightTheme";
 @import "./custom/darkTheme";
