--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -6,6 +6,8 @@ $card-background-color-dark: rgba(255, 255, 255, 0.2);
     background-color: $brand-primary-background-dark;
 
     .main-panel {
+        background-color: $brand-primary-background-dark;
+
         #navbar.navbar {
             background-color: $brand-primary-dark;
             color: white;
