--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -4,6 +4,8 @@
     background-color: $body-bg; // 2
 
     .main-panel {
+        background-color: $brand-primary-background;
+
         #navbar.navbar {
             background-color: $brand-primary;
             color: white;
