--- a/src/scss/material-dashboard/_sidebar-and-main-panel.scss
+++ b/src/scss/material-dashboard/_sidebar-and-main-panel.scss
@@ -307,7 +307,7 @@
     >.content {
         margin-top: 40px;
         padding: 30px 15px;
-        min-height: calc(100vh - 40px);
+        min-height: 50vh;
     }
 
     >.footer {
