--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -68,6 +68,7 @@ $card-background-color-dark: rgba(255, 255, 255, 0.2);
             linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
         }
 
+        .icon-container i,
         .arrow-container i {
             color: $white-color;
         }
