--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -45,8 +45,9 @@
             linear-gradient(to top, #{$black-color} 1px, rgba(210, 210, 210, 0) 1px);
         }
 
+        .icon-container i,
         .arrow-container i {
-            color: $black-color;
+            color: $brand-primary;
         }
     }
 }
