--- a/src/pages/catalogue/catalogue.scss
+++ b/src/pages/catalogue/catalogue.scss
@@ -16,7 +16,7 @@ $grid-gap: 7px;
 $grid-gap: 7px;
 $grip-col-min-max: minmax(50px, 200px);
 
-.game-item-list {
+.game-item-list>div>div>div {
     padding-top: 1em;
 
     display: grid;
