--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -68,8 +68,8 @@
 }
 
 #app .main-panel {
-    // height: 100vh;
-// overflow-y: scroll;
+    height: 100vh;
+    overflow-y: scroll;
 
     >.content {
         margin-top: 0;
