--- a/src/pages/catalogue/catalogue.scss
+++ b/src/pages/catalogue/catalogue.scss
@@ -1,20 +1,30 @@
 $grid-gap: 7px;
+$grip-col-min-max: minmax(50px, 200px);
 
 .catalogue-container {
     padding-top: 1em;
 
     display: grid;
     grid-gap: $grid-gap $grid-gap;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+
+    @media screen and (max-width: 800px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media screen and (max-width: 650px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: 400px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 
     .catalogue-item {
         border-radius: 10px;
         min-height: 100px;
     }
 }
-
-$grid-gap: 7px;
-$grip-col-min-max: minmax(50px, 200px);
 
 .game-item-list>div>div>div {
     padding-top: 1em;
