styling and new loader

--- a/src/pages/catalogue/catalogue.scss
+++ b/src/pages/catalogue/catalogue.scss
@@ -28,6 +28,9 @@ $grip-col-min-max: minmax(50px, 200px);
 
 .game-item-list>div>div>div {
     padding-top: 1em;
+    padding-bottom: 3em;
+    margin-bottom: 3em;
+    border-bottom: 3px solid white;
 
     display: grid;
     grid-gap: $grid-gap $grid-gap;
