--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -69,7 +69,7 @@
 
 #app .main-panel {
     height: 100vh;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 
     >.content {
         margin-top: 0;
