--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -1,9 +1,10 @@
 .generic-item-list {
+    // justify-content: center;
+
     .gen-item {
         margin-bottom: 5px;
 
         .gen-item-container {
-            background-color: #6c757d;
             display: flex;
             padding-right: 100px;
             width: 100%;
@@ -31,9 +32,9 @@
                     padding-top: .5em;
                     padding-left: 1rem;
                     padding-right: .5rem;
-                    color: #f8f9fa;
 
                     p {
+                        line-height: 1.2em;
                         white-space: nowrap;
                         overflow: hidden;
                         text-overflow: ellipsis;
@@ -41,14 +42,16 @@
                 }
 
                 .text-container.full {
-                    line-height: 100px;
                     padding-top: 0;
+
+                    p {
+                        line-height: 100px;
+                    }
                 }
 
                 .quantity-container {
                     text-align: left;
                     padding-left: 1rem;
-                    color: #f8f9fa;
                 }
             }
         }
