--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -22,7 +22,7 @@
             .gen-item-content-container {
                 flex-grow: 1;
                 max-height: 100px;
-                width: 100%;
+                min-width: 100%;
                 position: relative;
 
                 .text-container {
