--- a/src/pages/catalogue/catalogue.scss
+++ b/src/pages/catalogue/catalogue.scss
@@ -108,15 +108,14 @@ $grip-col-min-max: minmax(50px, 200px);
     .item {
         @media screen and (max-width: 500px) {
             display: flex;
+            margin-bottom: 5px;
         }
 
         .image-container {
-            margin: 5px;
-
             width: calc(100% - 10px);
             height: 0;
             padding-bottom: calc(100% - 10px);
-
+            margin: 5px;
 
             @media screen and (max-width: 500px) {
                 max-width: 128px;
@@ -136,6 +135,7 @@ $grip-col-min-max: minmax(50px, 200px);
         img {
             width: 100%;
             max-height: 100%;
+            min-height: 100px;
         }
 
         .loading img {
