--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -1,9 +1,11 @@
-#app {
+#app,
+body {
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
+    background-color: #CFCFCF;
 }
 
 #nav {
@@ -95,9 +97,9 @@
     margin-top: 3em;
 }
 
-#app {
-    overflow-y: scroll;
-}
+// #app {
+//     overflow-y: scroll;
+// }
 
 .row.justify {
     justify-content: center;
