--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -55,6 +55,29 @@
             color: $black-color;
             background-image: linear-gradient(to top, #{$brand-primary} 2px, rgba(63, 81, 181, 0) 2px),
             linear-gradient(to top, #{$black-color} 1px, rgba(210, 210, 210, 0) 1px);
+
+            $placeholderColor: $body-color;
+            $placeholderFontSize: .75em;
+
+            &::-webkit-input-placeholder {
+                color: $placeholderColor;
+                font-size: $placeholderFontSize;
+            }
+
+            &::-moz-placeholder {
+                color: $placeholderColor;
+                font-size: $placeholderFontSize;
+            }
+
+            &:-ms-input-placeholder {
+                color: $placeholderColor;
+                font-size: $placeholderFontSize;
+            }
+
+            &:-moz-placeholder {
+                color: $placeholderColor;
+                font-size: $placeholderFontSize;
+            }
         }
 
         .icon-container i,
