add to cart button works

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
 @import './scss/material-dashboard.scss';
+@import '../node_modules/@material/react-fab/dist/fab.css';
 @import './scss/custom.scss';
