--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -123,4 +123,8 @@ $list-item-text-color-dark: #f8f9fa;
     .arrow-container i {
         color: $white-color;
     }
+
+    .fab-bg-color {
+        background-color: $brand-primary-dark;
+    }
 }
