--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -89,4 +89,8 @@
     .fab-bg-color {
         background-color: $brand-primary;
     }
+
+    .button-active-bg {
+        background-color: $brand-secondary
+    }
 }
