added update button and ui tweaks

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -127,4 +127,8 @@ $list-item-text-color-dark: #f8f9fa;
     .fab-bg-color {
         background-color: $brand-primary-dark;
     }
+
+    .action-container i {
+        color: $white-color;
+    }
 }
