--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -93,4 +93,8 @@
     .button-active-bg {
         background-color: $brand-secondary
     }
+
+    .action-container i {
+        color: $black-color;
+    }
 }
