added displaying of guides

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,5 +1,6 @@
 @import "./custom/guideCardListTile";
 @import "./custom/chip";
+@import "./custom/guide";
 @import "./custom/general";
 @import "./custom/scrollbar";
 @import "./custom/sidebar";
