updated json files

--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -116,3 +116,16 @@ body {
 .fab-margin {
     margin: .5em;
 }
+
+.row.full,
+.container.full {
+    max-width: unset;
+}
+
+.pt1 {
+    padding-top: 1em;
+}
+
+.pb5 {
+    padding-bottom: 5em;
+}
