added basic communityMission page

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,4 +1,5 @@
 @import "./custom/guideCardListTile";
+@import "./custom/segmentedControl";
 @import "./custom/chip";
 @import "./custom/guide";
 @import "./custom/general";
