fix guide colors

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -157,4 +157,8 @@ $list-item-text-color-dark: #f8f9fa;
             background-color: $brand-secondary-dark !important;
         }
     }
+
+    .guide .section .heading {
+        background-color: $brand-secondary;
+    }
 }
