fix guide colors

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -159,6 +159,6 @@ $list-item-text-color-dark: #f8f9fa;
     }
 
     .guide .section .heading {
-        background-color: $brand-secondary;
+        background-color: $brand-secondary-dark;
     }
 }
