make drawer menu more dense

--- a/src/scss/material-dashboard/_sidebar-and-main-panel.scss
+++ b/src/scss/material-dashboard/_sidebar-and-main-panel.scss
@@ -181,7 +181,8 @@
 
     .nav li a,
     .nav li .dropdown-menu a {
-        margin: 10px 15px 0;
+        margin: 0 15px;
+        // margin: 10px 15px 0;
         border-radius: $border-radius-base;
         color: $black-color;
         padding-left: 10px;
