--- a/src/scss/material-dashboard/_togglebutton.scss
+++ b/src/scss/material-dashboard/_togglebutton.scss
@@ -1,11 +1,15 @@
 .togglebutton {
   vertical-align: middle;
-  &, label, input, .toggle {
+
+  &,
+  label,
+  input,
+  .toggle {
     user-select: none;
   }
+
   label {
     cursor: pointer;
-    color: $mdb-toggle-label-color;
     @include mdb-label-color-toggle-focus();
 
     // Hide original checkbox
@@ -19,9 +23,10 @@
       text-align: left; // Issue #737 horizontal form
       margin-left: 5px;
     }
+
     // Switch bg off and disabled
     .toggle,
-    input[type=checkbox][disabled] + .toggle {
+    input[type=checkbox][disabled]+.toggle {
       content: "";
       display: inline-block;
       width: 30px;
@@ -32,6 +37,7 @@
       transition: background 0.3s ease;
       vertical-align: middle;
     }
+
     // Handle off
     .toggle:after {
       content: "";
@@ -47,37 +53,40 @@
       border: 1px solid $mdb-checkbox-border-color;
       transition: left 0.3s ease, background 0.3s ease, box-shadow 0.1s ease;
     }
+
     input[type=checkbox] {
+
       // Handle disabled
       &[disabled] {
-        & + .toggle:after,
-        &:checked + .toggle:after {
+
+        &+.toggle:after,
+        &:checked+.toggle:after {
           background-color: #BDBDBD;
         }
       }
 
-      & + .toggle:active:after,
-      &[disabled] + .toggle:active:after {
+      &+.toggle:active:after,
+      &[disabled]+.toggle:active:after {
         box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 0, 0, 0.1);
       }
 
       // Ripple off and disabled
-      &:checked + .toggle:after {
+      &:checked+.toggle:after {
         left: 15px;
       }
     }
 
     // set bg when checked
     input[type=checkbox]:checked {
-      + .toggle {
+      +.toggle {
         background-color: rgba($brand-primary, (70/100)); // Switch bg on
       }
 
-      + .toggle:after {
+      +.toggle:after {
         border-color: $brand-primary; // Handle on
       }
 
-      + .toggle:active:after {
+      +.toggle:active:after {
         box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba($brand-primary, (10/100)); // Ripple on
       }
     }
