got edit and delete portal from portals page working

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -2,6 +2,7 @@
 @import "./custom/segmentedControl";
 @import "./custom/chip";
 @import "./custom/guide";
+@import "./custom/portal";
 @import "./custom/general";
 @import "./custom/scrollbar";
 @import "./custom/sidebar";
