added new guide

--- a/src/scss/custom/_guide.scss
+++ b/src/scss/custom/_guide.scss
@@ -20,9 +20,13 @@
             padding-left: .5em;
             padding-right: .5em;
 
+            p,
             .content {
                 font-size: 1.2em;
                 font-weight: 300;
+            }
+
+            .content {
                 margin-top: .5em;
             }
 
