--- a/src/scss/custom/_guideCardListTile.scss
+++ b/src/scss/custom/_guideCardListTile.scss
@@ -9,7 +9,8 @@
 
         >img {
             width: 100%;
-            border-radius: $border-radius-large;
+            border-top-left-radius: $border-radius-large;
+            border-top-right-radius: $border-radius-large;
         }
     }
 
