add ability to see likes and views on guide and like a guide

--- a/src/scss/custom/_guide.scss
+++ b/src/scss/custom/_guide.scss
@@ -37,6 +37,12 @@
                     display: inline-block;
                 }
             }
+
+            h3.metaData {
+                display: inline-block;
+                margin-top: -.5em;
+                padding: 1em;
+            }
         }
 
         .link {
