fix allRequired page loading

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -142,6 +142,10 @@ $list-item-text-color-dark: #f8f9fa;
         background-color: $brand-primary-dark;
     }
 
+    .button-active-bg {
+        background-color: $brand-secondary-dark;
+    }
+
     .action-container i {
         color: $white-color;
     }
