--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -108,7 +108,7 @@
     }
 
     .button-active-bg {
-        background-color: $brand-secondary
+        background-color: $brand-secondary;
     }
 
     .action-container i {
