make badges better

--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -26,8 +26,12 @@
                     border-radius: 100%;
                     padding: 0 .5em;
 
-                    &.big {
-                        padding: .25em .5em;
+                    &.large {
+                        padding: .15em .4em;
+                    }
+
+                    &.xlarge {
+                        padding: .25em .2em;
                     }
                 }
             }
