--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -23,7 +23,7 @@
                     position: absolute;
                     bottom: 0.1em;
                     right: -.5em;
-                    border-radius: 100%;
+                    border-radius: 25px;
                     padding: 0 .5em;
 
                     &.large {
@@ -32,6 +32,13 @@
 
                     &.xlarge {
                         padding: .25em .2em;
+                    }
+
+                    &.xxlarge {
+                        padding: 0 .5em;
+                        border-radius: 25px;
+                        bottom: 0;
+                        right: 0;
                     }
                 }
             }
