basic sync page

--- a/src/scss/custom/_sidebar.scss
+++ b/src/scss/custom/_sidebar.scss
@@ -16,3 +16,7 @@
 .nav .nav-item .material-icons {
     color: $brand-secondary-dark;
 }
+
+.nav .nav-item.active>.nav-link .material-icons {
+    color: $brand-secondary-dark;
+}
