--- a/src/pages/catalogue/catalogue.scss
+++ b/src/pages/catalogue/catalogue.scss
@@ -135,7 +135,7 @@ $grip-col-min-max: minmax(50px, 200px);
         img {
             width: 100%;
             max-height: 100%;
-            min-height: 100px;
+            // min-height: 100px;
         }
 
         .loading img {
