add online meetup submissions

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -188,4 +188,10 @@ $list-item-text-color-darker: #c5c5c5;
     .guide .section .heading {
         background-color: $brand-secondary-dark;
     }
+
+    .card {
+        .user-name {
+            color: white;
+        }
+    }
 }
