--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -131,4 +131,10 @@
     .action-container i {
         color: $black-color;
     }
+
+    .card {
+        .user-name {
+            color: $black-color;
+        }
+    }
 }
