--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -136,5 +136,9 @@
         .user-name {
             color: $black-color;
         }
+
+        .user-details .external-link i {
+            color: $brand-secondary;
+        }
     }
 }
