--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -193,5 +193,9 @@ $list-item-text-color-darker: #c5c5c5;
         .user-name {
             color: white;
         }
+
+        .user-details .external-link i {
+            color: $brand-secondary-dark;
+        }
     }
 }
