basics of the weekendMission

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -198,4 +198,13 @@ $list-item-text-color-darker: #c5c5c5;
             color: $brand-secondary-dark;
         }
     }
+
+    .customButton {
+        background-color: $brand-secondary-dark;
+        color: black;
+    }
+
+    .react-modal-sheet-container {
+        background-color: $brand-primary-background-dark !important;
+    }
 }
