--- a/src/scss/custom/_lightTheme.scss
+++ b/src/scss/custom/_lightTheme.scss
@@ -141,4 +141,8 @@
             color: $brand-secondary;
         }
     }
+
+    .customButton {
+        background-color: $brand-secondary;
+    }
 }
