--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -15,6 +15,29 @@
                 display: inline-block;
                 position: relative;
 
+                &.lazy-loaded-full-width {
+                    height: 100px;
+                    min-width: 100px;
+
+                    >span {
+                        height: 100%;
+                        width: 100%;
+                        position: relative;
+
+                        >img {
+                            object-fit: cover;
+                            height: 100%;
+                            width: 100%;
+                            margin: 0;
+                            position: absolute;
+                            top: 50%;
+                            left: 0;
+                            -ms-transform: translateY(-50%);
+                            transform: translateY(-50%);
+                        }
+                    }
+                }
+
                 img {
                     max-height: 100px;
                 }
